# MetaDrop

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  PRIVACY.md  README.de.md  README.md  README.ru.md  README.uk.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
data/: io.github.trendorin.MetaDrop.metainfo.xml
docs/: PRIVACY.md  SECURITY_MODEL.md  release-notes-0.1.0.md  release-notes-0.1.1.md  release-notes-0.1.2.md
packaging/: io.github.trendorin.MetaDrop.desktop  io.github.trendorin.MetaDrop.metainfo.xml
packaging/arch/: PKGBUILD.in
packaging/debian/: copyright
packaging/fedora/: metadrop.spec
packaging/scripts/: generate-sbom.sh
resources/: metadrop.qrc
src/app/: LanguageManager.cpp  LanguageManager.h  SingleInstance.cpp  SingleInstance.h  main.cpp
src/core/: AppSettings.cpp  AppSettings.h  EngineRegistry.cpp  EngineRegistry.h  FileGuard.cpp  FileGuard.h  MetadataEngine.h  MetadataService.cpp  MetadataService.h  MetadataTypes.cpp  MetadataTypes.h  OfficeXmlSanitizer.cpp  OfficeXmlSanitizer.h  OutputPlanner.cpp  OutputPlanner.h  RiskClassifier.cpp  RiskClassifier.h
src/core/engines/: AudioEngine.cpp  AudioEngine.h  DocumentEngine.cpp  DocumentEngine.h  ImageEngine.cpp  ImageEngine.h  PdfEngine.cpp  PdfEngine.h
src/ui/: AboutDialog.cpp  AboutDialog.h  DropArea.cpp  DropArea.h  FileTableModel.cpp  FileTableModel.h  MainWindow.cpp  MainWindow.h  MetadataTreeModel.cpp  MetadataTreeModel.h  SettingsDialog.cpp  SettingsDialog.h
tests/: CMakeLists.txt  CoreTests.cpp
translations/: metadrop_de.ts  metadrop_ru.ts  metadrop_uk.ts
